# apriltags

./: .gitignore  .travis.yml  BENCHMARKING.md  CMakeLists.txt  README.md  README.txt  Rakefile  conanfile.py  fips.yml
.travis/: build.sh  dependencies.sh  opencv2-dependencies.sh  opencv3-dependencies.sh
include/AprilTags/: CornerArray.h  CornerDetection.h  CornerDetector.h  Corners.h  DetectorBase.h  Edge.h  MathUtil.h  Quad.h  Segment.h  SubtagDetection.h  SubtagDetector.h  Tag16h5.h  Tag16h5_other.h  Tag25h7.h  Tag25h9.h  Tag36h11.h  Tag36h11_other.h  Tag36h9.h  TagArray.h  TagDetection.h  TagDetector.h  TagFamily.h  Types.h  Utils.h
lib/: BinaryClassifier.cc  CornerArray.cc  CornerDetector.cc  Corners.cc  DetectorBase.cc  Edge.cc  FloatImage.cc  GLine2D.cc  GLineSegment2D.cc  Homography33.cc  MathUtil.cc  Quad.cc  Segment.cc  SubtagDetection.cc  SubtagDetector.cc  TagArray.cc  TagDetection.cc  TagDetector.cc  TagFamily.cc  Utils.cc
lib/CornerDetector/: CornerDetectorTypes.cc  CornerDetectorTypes.h  DelaunayGeometry.cc  DelaunayGeometry.h  MatchHypothesis.cc  MatchHypothesis.h
lib/Geometry/: Edge.cc  Edge.h  GLine2D.h  GLineSegment2D.h  Homography33.cc  Homography33.h  LineSegment.h  Quad.cc  Segment.cc  Segment.h
lib/Utils/: BinaryClassifier.cc  BinaryClassifier.h  Gaussian.cc  GrayModel.cc  Gridder.h  ImageMasks.h  MathUtil.cc  MathUtil.h  MinMax.h  Utils.cc  range.hpp
src/: TagDetector.cc
test/: test_common.h
test/data/: test_data.h
test/perf/: CMakeLists.txt  tag_detector_perf.cc
test/unit/: CMakeLists.txt  corner_detector_test.cc  corners_test.cc  empty_test.cc  subtag_detector_test.cc  tag_array_test.cc  tag_detector_test.cc
